syntax = "proto3";
option java_package = "game.mode";
import "gameBase.proto";

//登录
message LoginRequest {
    string username = 1; //用户名
    string password = 2; //密码
    string nickname = 3; //昵称
    string head = 4; //头像
    Agent agent = 5; //登录终端
}

//登录返回数据
message LoginResponse {
    ErrorCode errorCode = 1; //错误码
    string username = 2; //用户名
    string nickname = 3; //昵称
    string head = 4; //头像
    uint64 lastLoginDate = 5; //上次登录时间
    string lastLoginIp = 6; //上次登录ip
    Agent lastLoginAgent = 7; //上次登录终端
}

//查询数据
message QueryRequest {
    OperationId operationId = 1;
    bytes data = 2; //数据
}

//查询数据返回
message QueryResponse {
    OperationId operationId = 1;
    ErrorCode error = 2; //错误码
    bytes data = 3; //数据
}

//创建房间
message CreateRoomRequest {
    double baseScore = 1; //底分
    uint32 gameTimes = 2; //游戏局数
    uint32 count = 3; //人数
    bool dianpao = 4; //点炮
}

//创建房间
message CreateRoomResponse {
    ErrorCode error = 1; //桌号
    string roomNo = 2; //桌号
    string intoIp = 3; //进入ip
    uint32 port = 4; //进入端口
}

//房间列表
message RoomListResponse {
    repeated Room roomList = 1;
}

//房间信息
message Room {
    double baseScore = 1; //底分
    double minIntoScore = 2; //最小进入分数
    uint32 count = 3; //人数
    string intoIp = 4; //进入ip
    uint32 port = 5; //进入端口
}

//登录终端
enum Agent {
    ANDROID = 0; //安卓
    IOS = 1; //ios
}